fix: connection.js img/svg files

--- a/src/index.pug
+++ b/src/index.pug
@@ -10,4 +10,8 @@ html(lang="en")
 		title Test
 	body
 		p Привет, мир!
+		.logo
+			a(href="#")
+				+image('logo', 'png')
 		+icon('icon-home')
+		#gallery
