--- a/src/index.pug
+++ b/src/index.pug
@@ -1,4 +1,5 @@
 include pug/libs/_libs
+include pug/layout/_layouts
 
 doctype html
 html(lang="en")
@@ -7,11 +8,6 @@ html(lang="en")
 		meta(http-equiv="X-UA-Compatible", content="IE=edge")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		link(rel="stylesheet", href="./scss/style.scss")
-		title Test
+		title  Official Website of Afrianska
 	body
-		p Привет, мир!
-		.logo
-			a(href="#")
-				+image('logo', 'png')
-		+icon('icon-home')
-		#gallery
+		
