--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,7 @@
 @import 'abstracts/variables';
 @import 'base/normalize';
 @import 'base/nullstyle';
-// @import 'layout/...';
+@import 'layout/header';
 @import 'components/buttons';
 @import 'components/heading';
 @import 'components/text';
