feat: add header and adaptive/scripts

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'abstracts/variables';
-@import 'base/normalize';
+@import 'abstracts/fonts';
 @import 'base/nullstyle';
+@import 'base/normalize';
 @import 'layout/header';
 @import 'components/buttons';
 @import 'components/heading';
