--- a/src/index.pug
+++ b/src/index.pug
@@ -1,13 +1,8 @@
-include pug/libs/_libs
-include pug/layout/_layouts
+extends pug/layout/_head
 
-doctype html
-html(lang="en")
-	head
-		meta(charset="UTF-8")
-		meta(http-equiv="X-UA-Compatible", content="IE=edge")
-		meta(name="viewport", content="width=device-width, initial-scale=1.0")
-		link(rel="stylesheet", href="./scss/style.scss")
-		title  Official Website of Afrianska
-	body
-		
+block content
+	.wrapper 
+	
+		include pug/layout/_header
+
+		main.main
