--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,3 +1,9 @@
+$blue-01: #1F3F68;
+$blue-02: #316099;
+$blue-03: #356EAD;
+$blue-04: #5A98D0;
+$blue-05: #98C3E8;
+$white: #FFFFFF;
 @mixin lh($lh, $fz) {
     line-height: calc(#{$lh} / #{$fz} * 100%);
 }
