--- a/src/scss/components/_text.scss
+++ b/src/scss/components/_text.scss
@@ -1,10 +1,16 @@
 body,
 html {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px;
+    font-family: 'Gilroy', sans-serif;
+    font-size: 16px;
     font-weight: 400;
-    @include lh(24, 15);
+    letter-spacing: 0.05em;
+    /* Blue_01 */
+    color: $blue-01;
+    @include lh(26, 16);
     scroll-behavior: smooth;
+    & p {
+        opacity: 0.6;
+    }
 }
 
 body.lock {
