fix: header menu scripts

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 @import 'base/nullstyle';
 @import 'base/normalize';
 @import 'layout/header';
+@import 'layout/hero';
 @import 'components/buttons';
 @import 'components/heading';
 @import 'components/text';
