--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,3 +7,5 @@
 @import 'components/buttons';
 @import 'components/heading';
 @import 'components/text';
+@import 'components/illustration';
+@import 'components/media';
