--- a/src/index.pug
+++ b/src/index.pug
@@ -6,3 +6,15 @@ block content
 		include pug/layout/_header
 
 		main.main
+
+			section.hero#hero
+				.hero__illustration.illustration
+
+					include pug/layout/_illustration
+
+				.hero__container._container
+					.hero__body 
+						h1.hero__title.title New Automation Tool for Your Home
+						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus tristique vulputate ultrices ut mauris tellus at. Posuere sollicitudin odio tellus elit.
+						.hero__buttons
+							button.hero__button.btn.btn--blue-04 See Our Project
