--- a/src/index.pug
+++ b/src/index.pug
@@ -18,3 +18,14 @@ block content
 						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus tristique vulputate ultrices ut mauris tellus at. Posuere sollicitudin odio tellus elit.
 						.hero__buttons
 							button.hero__button.btn.btn--blue-04 See Our Project
+
+			section.whatwedo#whatwedo
+				.whatwedo__container._container 
+					.whatwedo__body 
+
+						h2.whatwedo__title.title What we do to help our client grow in digital era,
+
+						.whatwedo__cards
+							+genCard('icon-man-1-wwd', 'Bring Technology To Your Comfrotable Home', 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.')
+							+genCard('icon-man-2-wwd', 'Make Your business To Be Better Famous In Internet', 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.')
+							+genCard('icon-woman-1-wwd', 'Build Your Digital Product That Suitable For Your Need', 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.')
