--- a/src/scss/base/_nullstyle.scss
+++ b/src/scss/base/_nullstyle.scss
@@ -53,6 +53,10 @@ main {
     flex: 1 1 auto;
 }
 
+#whatwedo {
+    padding: 190px 0px 192px 0px;
+}
+
 
 /* ----------------CONTAINER------------------------------------------------- */
 
