--- a/src/scss/components/_text.scss
+++ b/src/scss/components/_text.scss
@@ -1,10 +1,9 @@
 body,
 html {
-    font-family: 'Gilroy', sans-serif;
+    font-family: 'Gilroy Regular', sans-serif;
     font-size: 16px;
     font-weight: 400;
     letter-spacing: 0.05em;
-    /* Blue_01 */
     color: $blue-01;
     @include lh(26, 16);
     scroll-behavior: smooth;
