--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -113,6 +113,7 @@
         }
     }
     &__title {
+        font-family: 'Gilroy Semibold';
         font-size: 20px;
         font-weight: 600;
         @include lh(30, 20);
