--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,7 @@
 @import 'base/normalize';
 @import 'layout/header';
 @import 'layout/hero';
+@import 'layout/whatwedo';
 @import 'components/buttons';
 @import 'components/heading';
 @import 'components/text';
