feat: add OurFinishedProject and adaptive

--- a/src/pug/libs/_nav.pug
+++ b/src/pug/libs/_nav.pug
@@ -1,9 +1,10 @@
 -	
 	let nav1 = {
-		about: 'About',
+		hero: 'About',
 		whatwedo: 'What We Do',
 		project: 'Project',
-		howitwork: 'How It Work With Us'
+		blog: 'Blog Afrianska',
+		contactUs: 'Contact Us'
 	}
 	let nav2 = {
 		'https://www.instagram.com/': 'Instagram',
