--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,7 @@
 @import 'layout/header';
 @import 'layout/hero';
 @import 'layout/whatwedo';
+@import 'layout/ourfinishedproject';
 @import 'components/buttons';
 @import 'components/heading';
 @import 'components/text';
