--- a/src/index.pug
+++ b/src/index.pug
@@ -29,3 +29,15 @@ block content
 							+genCard('icon-man-1-wwd', 'Bring Technology To Your Comfrotable Home', 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.')
 							+genCard('icon-man-2-wwd', 'Make Your business To Be Better Famous In Internet', 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.')
 							+genCard('icon-woman-1-wwd', 'Build Your Digital Product That Suitable For Your Need', 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.')
+
+			section.project#project
+				.project__container._container 
+					.project__body 
+						.project__heading
+							h2.project__title.title Our Finished Project 
+							p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+						.project__cards-row 
+							+genMainProjectCard('Smart Home Installation', 'In Muarakana Housing Estate', 'our-finished-project', 'jpg')
+							.project__cards-other
+								+genProjectCard('Sparklite App', 'Marketplace', 'our-finished-project-2', 'jpg')
+								+genProjectCard('Car-Rapetition App', 'Board', 'our-finished-project-3', 'jpg')
