--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -24,6 +24,9 @@
     #whatwedo {
         padding: 100px 0;
     }
+    #project {
+        padding: 0px 0px 100px 0px;
+    }
 }
 
 @media (max-width: 992px) {
@@ -37,6 +40,9 @@
     }
     .whatwedo__cards .card:nth-child(2) {
         left: 0;
+    }
+    .project__title {
+        margin: 0px 33px 0px 0px;
     }
 }
 
@@ -71,6 +77,9 @@
     #whatwedo {
         padding: 60px 0;
     }
+    #project {
+        padding: 0px 0px 60px 0px;
+    }
     .whatwedo {
         &__title {
             max-width: 358px;
@@ -102,6 +111,44 @@
         }
         & p {
             margin: 0px 0px 22px 0px;
+        }
+    }
+    .project__heading {
+        margin: 0px 0px 60px 0px;
+        & p {
+            max-width: 400px;
+        }
+    }
+    .project__cards-row>*:not(:last-child) {
+        margin: 0px 0px 60px 0px;
+    }
+    .project-card {
+        width: 364px;
+    }
+    .item-project-main-card,
+    .item-project-card {
+        &__name {
+            font-size: 24px;
+        }
+    }
+    .item-project-card {
+        height: 300px;
+        & .img-placeholder img {
+            height: 300px;
+            width: 364px;
+        }
+    }
+}
+
+@media (max-width: 644px) {
+    .project__cards-other {
+        flex-direction: column;
+    }
+    .item-project-main-card {
+        & .svg-placeholder {
+            transform: scale(0.9);
+            bottom: -56px;
+            left: -43px;
         }
     }
 }
@@ -147,6 +194,9 @@
     #whatwedo {
         padding: 40px 0;
     }
+    #project {
+        padding: 0px 0px 40px 0px;
+    }
     .whatwedo {
         &__title {
             margin: 0px 0px 40px 0px;
@@ -169,6 +219,27 @@
         }
         & p {
             margin: 0px 0px 16px 0px;
+        }
+    }
+    .project__heading {
+        margin: 0px 0px 40px 0px;
+    }
+    .project__cards-row>*:not(:last-child) {
+        margin: 0px 0px 40px 0px;
+    }
+    .project-card {
+        max-width: 290px;
+    }
+    .item-project-main-card {
+        height: 380px;
+        &__content {
+            right: 18px;
+            top: 18px;
+        }
+        & .svg-placeholder {
+            transform: scale(0.7);
+            bottom: -86px;
+            left: -73px;
         }
     }
 }
