--- a/src/scss/layout/_whatwedo.scss
+++ b/src/scss/layout/_whatwedo.scss
@@ -10,6 +10,7 @@
         top: 0;
         left: 0;
         z-index: 5;
+        color: $blue-02;
     }
     &__cards {
         position: relative;
