--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -3,6 +3,7 @@ $blue-02: #316099;
 $blue-03: #356EAD;
 $blue-04: #5A98D0;
 $blue-05: #98C3E8;
+$gray-6: #F2F2F2;
 $white: #FFFFFF;
 @mixin lh($lh, $fz) {
     line-height: calc(#{$lh} / #{$fz} * 100%);
