feat: add footer

--- a/src/index.pug
+++ b/src/index.pug
@@ -47,4 +47,4 @@ block content
 						.ourclient__logos 
 							+genClientLogos(logos,'ourclient__list', 'ourclient__item', 'ourclient__link')
 
-
+		include pug/layout/_footer
