--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 @import 'layout/whatwedo';
 @import 'layout/ourfinishedproject';
 @import 'layout/ourclient';
+@import 'layout/footer';
 @import 'components/buttons';
 @import 'components/heading';
 @import 'components/text';
