--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,7 @@
 @import 'layout/hero';
 @import 'layout/whatwedo';
 @import 'layout/ourfinishedproject';
+@import 'layout/footer-wrapper';
 @import 'layout/ourclient';
 @import 'layout/footer';
 @import 'components/buttons';
