--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -24,7 +24,34 @@
 }
 
 .btn--blue-04 {
+    position: relative;
     color: $white;
     background: $blue-04;
     box-shadow: 5px 10px 20px rgba(53, 110, 173, 0.2);
+    &::before,
+    &::after {
+        content: "";
+        position: absolute;
+        left: 10%;
+        width: 180px;
+        height: 56px;
+        border: $blue-04 12px solid;
+        opacity: 0.3;
+        animation: ripple 3.0s ease-out infinite;
+    }
+    &:after {
+        animation-delay: -0.6s;
+    }
+}
+
+@keyframes ripple {
+    0% {
+        transform: scale(1);
+        opacity: 0.75;
+    }
+    50%,
+    100% {
+        transform: scale(1.5);
+        opacity: 0;
+    }
 }
