--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
     position: relative;
     overflow: hidden;
+    z-index: 2;
     &::after {
         content: '';
         position: absolute;
@@ -105,6 +106,11 @@
     &__about>*:first-child,
     &__follow>*:first-child {
         margin: 0px 0px 32px 0px;
+    }
+    &__buttons {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
     }
     &__copyright {
         padding: 0px 0px 64px 0px;
