fix: header menu nav

--- a/src/index.pug
+++ b/src/index.pug
@@ -40,6 +40,7 @@ block content
 								+genProjectCard('Sparklite App', 'Marketplace', 'our-finished-project-2', 'jpg')
 								+genProjectCard('Car-Rapetition App', 'Board', 'our-finished-project-3', 'jpg')
 
+		// Как научусь делать адекватный background с элементами ниже, исправлю
 		.footer__wrapper
 			section.ourclient#ourclient
 				.ourclient__container._container 
