feat: add page-heading and adaptive

--- a/src/blog.pug
+++ b/src/blog.pug
@@ -4,3 +4,9 @@ block content
 	.wrapper 
 	
 		include pug/layout/_header
+
+		main.main
+
+			+genPageHeading('Blog Afrianska', 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.')
+
+		include pug/layout/_footer
