--- a/src/pug/layout/_footer.pug
+++ b/src/pug/layout/_footer.pug
@@ -28,6 +28,7 @@ footer.footer
 						h3.footer-about__title About US
 						ul.footer__list 
 							+genNav(nav1, 'footer__item', 'footer__link')
+							+genNavPages(pages, 'footer__item', 'footer__link')
 					.footer__follow
 						h3.footer-follow__title Follow US
 						ul.footer__list 
