--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 @import 'base/nullstyle';
 @import 'base/normalize';
 @import 'layout/header';
+@import 'layout/page-heading';
 @import 'layout/hero';
 @import 'layout/whatwedo';
 @import 'layout/ourfinishedproject';
