--- a/src/scss/components/_heading.scss
+++ b/src/scss/components/_heading.scss
@@ -23,6 +23,15 @@ h4 {
     color: $blue-01;
 }
 
+h5 {
+    font-family: 'Gilroy Semibold';
+    font-weight: 600;
+    font-size: 44px;
+    @include lh(74, 44);
+    letter-spacing: 0.04em;
+    color: $white;
+}
+
 .heading__block {
     display: flex;
     align-items: flex-start;
