--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -74,8 +74,20 @@
     h2 {
         font-size: 32px;
     }
+    h5 {
+        font-size: 36px;
+    }
     .header {
         padding: 20px 0px 0px 0px;
+    }
+    .page-heading {
+        margin: 90px 0px 0px 0px;
+        &__body {
+            padding: 40px 0;
+        }
+        &__desc {
+            font-size: 16px;
+        }
     }
     .hero__body {
         padding: 120px 0px 450px 0px;
@@ -211,6 +223,14 @@
     }
     h4 {
         font-size: 18px;
+    }
+    h5 {
+        font-size: 26px;
+    }
+    .page-heading {
+        &__body {
+            padding: 30px 0;
+        }
     }
     .hero__body {
         padding: 100px 0px 320px 0px;
