fix: rewriteData.js

--- a/src/blog.pug
+++ b/src/blog.pug
@@ -9,4 +9,12 @@ block content
 
 			+genPageHeading('Blog Afrianska', 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.')
 
+			+genSearch('Search Article')
+
+			section.popular-article#popular-article
+				.popular-article__container._container
+					.popular-article__body 
+						.popular-article__title.title Popular
+						.popular-article__row
+
 		include pug/layout/_footer
