--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,15 +4,17 @@
 @import 'base/normalize';
 @import 'layout/header';
 @import 'layout/page-heading';
-@import 'layout/search-article';
 @import 'layout/hero';
 @import 'layout/whatwedo';
 @import 'layout/ourfinishedproject';
 @import 'layout/footer-wrapper';
 @import 'layout/ourclient';
+@import 'layout/search-article';
+@import 'layout/popular-article';
 @import 'layout/footer';
 @import 'components/buttons';
 @import 'components/heading';
 @import 'components/text';
 @import 'components/illustration';
+@import 'components/separate';
 @import 'components/media';
