--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -6,6 +6,7 @@ $blue-05: #98C3E8;
 $gray-5: #F4F4F4;
 $gray-6: #F2F2F2;
 $white: #FFFFFF;
+$black: #000000;
 @mixin lh($lh, $fz) {
     line-height: calc(#{$lh} / #{$fz} * 100%);
 }
