--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,7 @@
 @import 'layout/ourclient';
 @import 'layout/search-article';
 @import 'layout/popular-article';
+@import 'layout/all-article';
 @import 'layout/footer';
 @import 'components/buttons';
 @import 'components/heading';
