--- a/src/pug/libs/_nav.pug
+++ b/src/pug/libs/_nav.pug
@@ -10,6 +10,10 @@
 		'https://www.linkedin.com/': 'LinkedIn',
 		'https://www.youtube.com/': 'Youtube'
 	}
+	let navBlog = {
+		'popular-article': 'Popular article',
+		'all-article': 'All article'
+	}
 
 mixin genNav(nav, classLi, classA)
 	each value, key in nav
