--- a/src/blog.pug
+++ b/src/blog.pug
@@ -3,7 +3,7 @@ extends pug/layout/_head
 block content
 	.wrapper 
 	
-		include pug/layout/_header-blog
+		include pug/layout/_header
 
 		main.main
 
@@ -30,4 +30,4 @@ block content
 							a(href="#").pages-all-article__old Old Post
  
 
-		include pug/layout/_footer-blog
+		include pug/layout/_footer
