--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -54,6 +54,12 @@
             margin: 0px 33px 0px 0px;
         }
     }
+    .form-contacts {
+        & input,
+        & textarea {
+            width: 310px;
+        }
+    }
 }
 
 @media (max-width: 860px) {
@@ -240,6 +246,43 @@
     .pages-all-article {
         padding: 36px 0px 0px 0px;
     }
+    .contacts,
+    .map {
+        padding: 0px 0px 60px 0px;
+    }
+    .contacts {
+        &__body {
+            flex-direction: column;
+            &>*:not(:last-child) {
+                margin: 0px 0px 30px 0px;
+            }
+        }
+        &__content {
+            &>*:not(:last-child) {
+                margin: 0px 0px 30px 0px;
+            }
+            &>*:first-child {
+                margin: 0px 0px 41px 0px;
+            }
+        }
+        &__title {
+            margin: 0px 0px 14px 0px;
+        }
+        &__form {
+            padding: 46px;
+            & .title {
+                margin: 0px 0px 28px 0px !important;
+            }
+        }
+    }
+    .form-contacts {
+        &>*:not(:last-child) {
+            margin: 0px 0px 22px 0px;
+        }
+        &__btn {
+            margin: 42px 0px 0px 0px;
+        }
+    }
     .footer {
         &::after {
             width: 100%;
@@ -334,6 +377,40 @@
     }
     .hero__illustration {
         transform: scale(0.5);
+    }
+    .contacts {
+        &__body {
+            &>*:not(:last-child) {
+                margin: 0px 0px 26px 0px;
+            }
+        }
+        &__content {
+            &>*:not(:last-child) {
+                margin: 0px 0px 26px 0px;
+            }
+            &>*:first-child {
+                margin: 0px 0px 31px 0px;
+            }
+        }
+        &__form {
+            padding: 30px;
+        }
+    }
+    .form-contacts {
+        width: 100%;
+        & input,
+        & textarea {
+            width: 100%;
+        }
+        & input {
+            min-height: 52px;
+        }
+        & textarea {
+            min-height: 104px;
+        }
+        &__btn {
+            min-height: 52px !important;
+        }
     }
 }
 
@@ -443,6 +520,10 @@
         padding: 0px 0px 40px 0px;
     }
     .all-article {
+        padding: 0px 0px 40px 0px;
+    }
+    .contacts,
+    .map {
         padding: 0px 0px 40px 0px;
     }
     .footer {
