--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,7 @@
 @import 'layout/search-article';
 @import 'layout/popular-article';
 @import 'layout/all-article';
+@import 'layout/contacts';
 @import 'layout/footer';
 @import 'components/buttons';
 @import 'components/heading';
