feat: add preloader

--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -109,6 +109,9 @@
     h5 {
         font-size: 36px;
     }
+    .preloader {
+        background-size: 30%;
+    }
     .header {
         padding: 20px 0px 0px 0px;
     }
