--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,6 +15,7 @@
 @import 'layout/contacts';
 @import 'layout/footer';
 @import 'components/buttons';
+@import 'components/preloader';
 @import 'components/heading';
 @import 'components/text';
 @import 'components/illustration';
