feat: add meta tags

--- a/src/pug/layout/_head.pug
+++ b/src/pug/layout/_head.pug
@@ -6,6 +6,20 @@ html(lang="en")
 		meta(charset="UTF-8")
 		meta(http-equiv="X-UA-Compatible", content="IE=edge")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
+		meta(name="description", content="The site was created in 2022. The site was developed on the instructions from MEDIASOFT Ulyanovsk.")
+		meta(name="keywords", content="Afrianska, MEDIASOFT, Ulyanovsk")
+		meta(name="Author", content="Minin Maxim Maksimovich")
+		meta(name="Copyright", content="Minin Maxim Maksimovich")
+		meta(property="og:locale", content="en_EN")
+		meta(property="og:title", content="Official Website of Afrianska")
+		meta(property="og:description", content="The site was created in 2022. The site was developed on the instructions from MEDIASOFT Ulyanovsk.")
+		meta(property="og:url", content="https://nyar1othotep.github.io/afrianska-mediasoft/")
+		meta(property="og:image", content="https://sun7.userapi.com/sun7-6/s/v1/ig2/1lmzhKwdkB7slmvPRJiiWh9t71gplm1ZvOrXf4ZlvClCifFk1q9ZqoCvr1HfyXn9B1xk4dqnTRS7gfnOMJmh5XJ1.jpg?size=1200x630&quality=96&type=album")
+		meta(property="og:site_name", content="Official Website of Afrianska")
+		meta(name="twitter:site", content="Minin Maxim Maksimovich")
+		meta(name="twitter:title", content="Official Website of Afrianska")
+		meta(name="twitter:description", content="The site was created in 2022. The site was developed on the instructions from MEDIASOFT Ulyanovsk.")
+		meta(name="twitter:image", content="https://sun7.userapi.com/sun7-6/s/v1/ig2/1lmzhKwdkB7slmvPRJiiWh9t71gplm1ZvOrXf4ZlvClCifFk1q9ZqoCvr1HfyXn9B1xk4dqnTRS7gfnOMJmh5XJ1.jpg?size=1200x630&quality=96&type=album")
 		link(rel="stylesheet", href="./scss/style.scss")
 		title  Official Website of Afrianska
 	body
