--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -6,6 +6,7 @@
     &__body {
         padding: 189px 0px 190px 0px;
         max-width: 515px;
+        overflow: hidden;
         & p {
             max-width: 425px;
             margin: 0px 0px 75px 0px;
