--- a/src/scss/components/_preloader.scss
+++ b/src/scss/components/_preloader.scss
@@ -4,7 +4,7 @@
     position: fixed;
     background: $white url('../images/loader.gif') no-repeat center center;
     background-size: 20%;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     z-index: 1000;
 }
