--- a/src/scss/layout/_popular-article.scss
+++ b/src/scss/layout/_popular-article.scss
@@ -1,6 +1,7 @@
 /* ----------------ARTICLE------------------------------------------------- */
 
 .article {
+    cursor: pointer;
     &__title {
         margin: 0px 0px 32px 0px;
         font-family: 'Gilroy Semibold';
