--- a/src/pug/layout/_head.pug
+++ b/src/pug/layout/_head.pug
@@ -27,7 +27,8 @@ html(lang="en")
 		meta(name="twitter:title", content="Official Website of Afrianska")
 		meta(name="twitter:description", content="The site was created in 2022. The site was developed on the instructions from MEDIASOFT Ulyanovsk.")
 		meta(name="twitter:image", content="https://sun7.userapi.com/sun7-6/s/v1/ig2/1lmzhKwdkB7slmvPRJiiWh9t71gplm1ZvOrXf4ZlvClCifFk1q9ZqoCvr1HfyXn9B1xk4dqnTRS7gfnOMJmh5XJ1.jpg?size=1200x630&quality=96&type=album")
-		link(rel="stylesheet", href="./scss/style.scss")
+		link(rel="stylesheet", href="https://unpkg.com/swiper@8/swiper-bundle.min.css")
+		script(src="https://unpkg.com/swiper@8/swiper-bundle.min.js") 
 		title  Official Website of Afrianska
 	body
 		block content
