--- a/src/pug/layout/_header.pug
+++ b/src/pug/layout/_header.pug
@@ -16,6 +16,11 @@ header.header
 							h3.menu-header__title Follow US
 							+icon('icon-arrow-up-down')
 						+genNav(nav2, 'menu-header__item', 'menu-header__link')
+					ul.menu-header__list(id="third")
+						.menu-header__nav
+							h3.menu-header__title Third nav
+							+icon('icon-arrow-up-down')
+						+genNav(nav3, 'menu-header__item', 'menu-header__link')
 
 				.header__burger
 					span
