--- a/src/pug/libs/_nav.pug
+++ b/src/pug/libs/_nav.pug
@@ -10,11 +10,19 @@
 		'https://www.linkedin.com/': 'LinkedIn',
 		'https://www.youtube.com/': 'Youtube'
 	}
+	let nav3 = {
+		first: 'First link',
+		second: 'Second link',
+		third: 'Third link',
+		fourth: 'Fourth link'
+	}
 
 mixin genNav(nav, classLi, classA)
 	each value, key in nav
 		li(class=classLi)
 			if(nav == nav2)
 				a(class=classA, href=key, target="_blank", title=value)=value
-			else
+			else if(nav == nav1)
 				a(class=classA, href="index.html#"+key, title=value)=value
+			else 
+				a(class=classA, href="#", title=value)=value
