--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -113,10 +113,10 @@
         background-size: 30%;
     }
     .header {
-        padding: 20px 0px 0px 0px;
+        padding: 20px 0px;
     }
     .page-heading {
-        margin: 90px 0px 30px 0px;
+        margin: 0px 0px 30px 0px;
         &__body {
             padding: 40px 0;
         }
@@ -353,6 +353,9 @@
             bottom: -56px;
             left: -43px;
         }
+    }
+    .project-card {
+        margin: 0 auto;
     }
 }
 
