--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,12 +1,19 @@
 /* ----------------HEADER------------------------------------------------- */
 
 .header {
-    padding: 40px 0px 0px 0px;
-    position: absolute;
+    padding: 40px 0px;
+    position: sticky;
     width: 100%;
     left: 0;
     top: 0;
+    background: $white;
     z-index: 50;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
+    .main-html & {
+        padding: 40px 0px 0px 0px;
+        position: absolute;
+        box-shadow: none;
+    }
     &__container {
         max-width: 1230px;
     }
