--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,6 +18,7 @@
 @import 'components/preloader';
 @import 'components/heading';
 @import 'components/text';
+@import 'components/swiper';
 @import 'components/illustration';
 @import 'components/separate';
 @import 'components/media';
